--- a/jaleApp/src/main/resources/templates/passenger/listPassenger.html
+++ b/jaleApp/src/main/resources/templates/passenger/listPassenger.html
@@ -44,6 +44,7 @@
 				</div>
 				<div class="sidebar-brand-text mx-2">JaleAPP Pasajeros</div>
 			</a>
+			
 
 			<!-- Divider -->
 			<hr class="sidebar-divider my-0">
@@ -62,7 +63,16 @@
 						<a class="collapse-item" th:href="@{/passengers/list}">Pasajeros</a>
 
 					</div>
-				</div></li>
+				</div>
+				
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/conductors/list}">Conductores</a>
+
+				</div>
+				</div>
+				</li>
 
 
 
