implemented vehicles many to one

--- a/jaleApp/src/main/resources/templates/conductor/conductor.html
+++ b/jaleApp/src/main/resources/templates/conductor/conductor.html
@@ -55,11 +55,25 @@
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/conductors/list}">Conductores
+						<a class="collapse-item" th:href="@{/passengers/list}">Pasajeros
 						</a>
 					</div>
+					</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/conductors/list}">Conductores</a>
 
-				</div></li>
+				</div>
+				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
+
+				</div>
+				</div>	
+					</li>
 
 			<!-- Sidebar Toggler (Sidebar) -->
 
