--- a/jaleApp/src/main/resources/templates/passenger/listPassenger.html
+++ b/jaleApp/src/main/resources/templates/passenger/listPassenger.html
@@ -72,6 +72,13 @@
 
 				</div>
 				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
+
+				</div>
+				</div>								
 				</li>
 
 
