--- a/jaleApp/src/main/resources/templates/vehiculo/vehiculo.html
+++ b/jaleApp/src/main/resources/templates/vehiculo/vehiculo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 
@@ -11,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>202101</title>
+<title>JaleApp</title>
 
 <!-- Custom fonts for this template-->
 <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
@@ -34,38 +33,35 @@
 		<ul
 			class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
 			id="accordionSidebar">
-
 			<!-- Sidebar - Brand -->
 			<a
 				class="sidebar-brand d-flex align-items-center justify-content-center"
-				th:href="@{/conductors/list}">
+				th:href="@{/vehicles/list}">
 				<div class="sidebar-brand-icon rotate-n-15">
 					<i class="fas fa-leaf"></i>
 				</div>
-				<div class="sidebar-brand-text mx-2">JaleAPP Conductores</div>
+				<div class="sidebar-brand-text mx-2">JaleApp Vehiculos</div>
 			</a>
 
 			<!-- Divider -->
 			<hr class="sidebar-divider my-0">
 
 
-
-
 			<!-- Nav Item - Pages Collapse Menu -->
 			<li class="nav-item"><a class="nav-link collapsed" href="#"
-				data-target="#collapseTwo" aria-expanded=true
+				data-target="#collapseTwo" aria-expanded="false"
 				aria-controls="collapseTwo"> <i class="fas fa-fw fa-cog"></i> <span>Men&uacute;</span>
 			</a>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/passengers/list}">Pasajeros</a>
-
-				</div>
-				</div>
+						<a class="collapse-item" th:href="@{/passengers/list}">Pasajeros
+						</a>
+					</div>
+					</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
-					<div class="bg-white py-2 collapse-inner rounded">
+				<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/conductors/list}">Conductores</a>
 
 				</div>
@@ -76,13 +72,8 @@
 						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
 
 				</div>
-				</div>				
-				</li>
-
-
-
-			<!-- Divider -->
-			<hr class="sidebar-divider">
+				</div>	
+					</li>
 
 			<!-- Sidebar Toggler (Sidebar) -->
 
@@ -129,6 +120,7 @@
 								class="mr-2 d-none d-lg-inline text-gray-600 small"><img
 									th:src="@{/img/logout.png}" width="30" height="30" alt="logo"
 									align="middle"></img></span>
+
 						</a> <!-- Dropdown - User Information -->
 							<div
 								class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -137,8 +129,8 @@
 									class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Perfil
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="categories/index"
-									data-toggle="modal" data-target="#logoutModal"> <i
+								<a class="dropdown-item" href="#" data-toggle="modal"
+									data-target="#logoutModal"> <i
 									class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
 									Cerrar sesión
 								</a>
@@ -153,50 +145,74 @@
 				<div class="container-fluid">
 
 					<!-- Page Heading -->
-					<h1 class="h3 mb-4 text-gray-800">Conductores</h1>
-					<a th:href="@{/conductors/new/}" class="btn btn-danger btn-xs">Nuevo</a>
-
-
+					<h1 class="h3 mb-4 text-gray-800">Registrar Vehiculo</h1>
 
 					<hr class="sidebar-divider">
 
-					<table class="table table-striped">
-						<thead class="thead-light">
-							<tr>
-								<th scope="col">Id</th>
-								<th scope="col">DNI</th>
-								<th scope="col">Nombre</th>
-								<th scope="col">Email</th>
-								<th scope="col">Direccion</th>
-								<th scope="col">TIU</th>
-								<th scope="col">Descripcion</th>
-								<th scope="col">Numero de Cuenta</th>
-								<th scope="col">Saldo</th>
-								<th scope="col">Deuda</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:each="e: ${listaConductores}">
-								<td th:text="${e.idConductor}"></td>
-								<td th:text="${e.DNI}"></td>
-								<td th:text="${e.nameConductor}"></td>
-								<td th:text="${e.emailConductor}"></td>
-								<td th:text="${e.addressConductor}"></td>
-								<td th:text="${e.TIU}"></td>
-								<td th:text="${e.descriptionConductor}"></td>
-								<td th:text="${e.accountNumber}"></td>
-								<td th:text="${e.balanceFavor}"></td>
-								<td th:text="${e.balanceDebt}"></td>
-								<td><a th:href="@{/conductors/delete?id=}+${e.idConductor}"
-									class="btn btn-danger"><i class="fa fa-trash"
-										aria-hidden="true"></i></a></td>
+					<form th:action="@{/vehicles/save}" th:object="${vehiculo}"
+						method="post">
+						<div class="form-group row">
+							<label for="Placa" class="col-sm-2 col-form-label">Placa:
+							</label>
+							<div class="col-sm-6">
+								<input type="text" th:field="*{placaVehiculo}"
+									class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('placaVehiculo')}"
+									th:errors="*{placaVehiculo}"></small>
+							</div>
+						</div>
 
-							</tr>
-						</tbody>
-					</table>
+						<div class="form-group row">
+							<label for="Revision" class="col-sm-2 col-form-label">Revision
+								Tecnica: </label>
+							<div class="col-sm-6">
+								<input type="text" th:field="*{revisionVehiculo}"
+									class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('revisionVehiculo')}"
+									th:errors="*{revisionVehiculo}"></small>
+							</div>
+						</div>
+
+						<div class="form-group row">
+							<label for="marca" class="col-sm-2 col-form-label">Marca:
+							</label>
+							<div class="col-sm-6">
+								<input type="text" th:field="*{marcaVehiculo}"
+									class="form-control"
+									th:errorclass="'form-control alert-danger'" /> <small
+									class="form-text text-danger"
+									th:if="${#fields.hasErrors('marcaVehiculo')}"
+									th:errors="*{marcaVehiculo}"></small>
+							</div>
+						</div>
+
+						<div class="form-group row">
+							<label for="color" class="col-sm-2 col-form-label">Conductor:
+							</label>
+							<div class="col-sm-6">
+								<select class="custom-select custom-select-sm"
+									th:field="*{conductor}">
+									<option th:each="conductor : ${listaConductor}"
+										th:value="${conductor.idConductor}"
+										th:utext="${conductor.nameConductor}" />
+								</select>
+							</div>
+						</div>
+
+						<div class="form-group row">
+							<div class="col-sm-6">
+								<input type="submit" value="Guardar" class="btn btn-secondary"></input>
+								<a href="/vehicles/list" class="btn btn-danger">Cancelar</a>
+							</div>
+						</div>
+
+					</form>
 
 					<p th:text="${mensaje}" class="form-text text-success"></p>
-
 				</div>
 				<!-- /.container-fluid -->
 
@@ -238,14 +254,14 @@
 					</button>
 				</div>
 				<div class="modal-body">Seleccione "Cerrar sesión" a
-					continuación si está listo para finalizar su sesión actual.</div>
+					continuación si está listo para finalizar su sesión actual</div>
 				<div class="modal-footer">
 					<form id="logoutForm" th:action="@{/logout}" method="post">
 						<button class="btn btn-danger"
 							onclick="document.getElementById('logoutForm').submit();"
 							type="submit">Cerrar</button>
 						<button class="btn btn-dark" type="button" data-dismiss="modal"
-							th:href="@{/passengers/list}">Cancel</button>
+							th:href="@{/conductors/list}">Cancel</button>
 					</form>
 				</div>
 			</div>
